# kuznechik_cuda

./: .gitignore  CMakeLists.txt  Makefile  README.md  key.txt  test.sh
include/: common.h  cpu_kuznechik.h  cuda_helper.h  cuda_kuznechik.h  input.h  kuznechik.h
src/: CMakeLists.txt  cpu_kuznechik.c  cpu_test.c  ctr_encrypt.c  cuda_helper.cu  cuda_kuznechik.cu  generator.c  input.c  kuznechik.c  main.c
